bad/assign_field_string_of_field_bool.example_compiler_output
ERROR
[1mbad/assign_field_string_of_field_bool.lat:10:16: [1;31merror: [0;1massigning to `string` from incompatible type `boolean`[m
	(new D).c.fld = true;
	              [1;32m^[m
